--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 div.jumbotron { color: rgb(202,30,7)}
-div.body { background-color: rgb(360,350,360)}
+div.body { background-color: red}
 #Nav { background-color: rgb(36,3,1)}
