--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 div.jumbotron { color: rgb(202,30,7)}
-div.body { color: red}
+div.body { background-color: rgb(20,30,6)}
 #Nav { background-color: rgb(36,3,1)}
+
