--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 div.jumbotron { color: rgb(202,30,7)}
-div.body { background-color: rgb(20,30,6)}
+body {
+    background-color: #2CA6B8;
+  }
 #Nav { background-color: rgb(36,3,1)}
 
