--- a/style.css
+++ b/style.css
@@ -4,4 +4,4 @@ body {
   }
 #Nav { background-color: rgb(36,3,1)}
 div.jumbotron text-center {margin-bottom:0} 
-class="jumbotron text-center" {margin-bottom:0}
+div.class="jumbotron text-center" {margin-bottom:0}
