--- a/style.css
+++ b/style.css
@@ -6,4 +6,5 @@ body {
 div.jumbotron text-center {margin-bottom:0} 
 div.class="jumbotron text-center" {margin-bottom:0}
 #Erstens {margin-bottom:30px}
+#margin {margin:0}
 
