--- a/style.css
+++ b/style.css
@@ -7,4 +7,4 @@ div.jumbotron text-center {margin-bottom:0}
 div.class="jumbotron text-center" {margin-bottom:0}
 #Erstens {margin-bottom:30px}
 #marigin {margin:0}
-
+#maggi {margin-top:30px}
