--- a/style.css
+++ b/style.css
@@ -8,4 +8,4 @@ div.class="jumbotron text-center" {margin-bottom:0}
 #Erstens {margin-bottom:30px}
 #marigin {margin:0}
 #maggi {margin-top:30px}
-#Los Angeles {width="1220"}
+#Los Angeles {width:1220}
