--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 div.jumbotron { color: rgb(202,30,7)}
 body {
-    background-color: #5CA6B8;
+    background-color: #F08080;
   }
 #Nav { background-color: rgb(36,3,1)}
 div.jumbotron text-center {margin-bottom:0} 
