--- a/style.css
+++ b/style.css
@@ -8,4 +8,5 @@ div.class="jumbotron text-center" {margin-bottom:0}
 #Erstens {margin-bottom:30px}
 #marigin {margin:0}
 #maggi {margin-top:30px}
-#Los Angeles {height: 200px;}
+.img {height: 200px;
+    background: #aaa;}
