--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ div.class="jumbotron text-center" {margin-bottom:0}
 #Erstens {margin-bottom:30px}
 #marigin {margin:0}
 #maggi {margin-top:30px}
-.img {height: 200px;
-    background: #aaa;}
+img {max-width:100%;
+      height: auto;}
