--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 div.jumbotron text-center {margin-bottom:0} 
 div.class="jumbotron text-center" {margin-bottom:0}
 #Erstens {margin-bottom:30px}
-#marigin {margin:0}
+#marigin { background-color: #F08080;}
 #maggi {margin-top:30px}
 img {max-width:100%;
       height: auto;}
