--- a/style.css
+++ b/style.css
@@ -10,3 +10,4 @@ div.class="jumbotron text-center" {margin-bottom:0}
 #maggi {margin-top:30px}
 img {max-width:100%;
       height: auto;}
+#head { color: #2F4F4F;}
